--- a/style/style.css
+++ b/style/style.css
@@ -8,6 +8,16 @@ a {
   color: black;
 }
 
+h1 {
+  font-size: 2.5rem;
+}
+
+p {
+  font-weight: 400;
+  margin-top: 0.5rem;
+  font-size: 0.9rem;
+}
+
 .btn {
   width: 260px;
   height: 40px;
@@ -51,6 +61,7 @@ section {
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+  width: 100%;
 }
 
 * {
@@ -101,7 +112,7 @@ header {
   text-align: center;
 }
 .nav-menu ul li {
-  margin: 0 1rem;
+  padding: 0 1rem;
 }
 
 .menu ul {
@@ -110,6 +121,16 @@ header {
 }
 .menu ul li {
   margin-right: 1rem;
+}
+
+.text p span {
+  border-bottom: 1px solid black;
+  transition: border-bottom 0.2s ease-in-out;
+}
+
+.text p span:hover {
+  border-bottom: 2px solid black;
+  cursor: pointer;
 }
 
 .section-a {
